Update Dictionary Controller