@@ -3,18 +3,19 @@ package gui_package.services;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
+
 import com.google.gson.Gson;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
-import com.google.gson.JsonParser;
 
 public class googleTranslator {
 
-    public String translate(String text, String targetLanguage) {
+    public static String translate(String text, String targetLanguage) {
         try {
             String url = "https://translate.googleapis.com/translate_a/single?client=gtx&sl=auto&tl=" + targetLanguage + "&dt=t&q=" + text;
-            URL apiUrl = new URL(url);
+            URL apiUrl = URI.create(url).toURL();
 
             HttpURLConnection connection = (HttpURLConnection) apiUrl.openConnection();
             connection.setRequestMethod("GET");
@@ -31,9 +32,8 @@ public class googleTranslator {
             connection.disconnect();
 
             // Xử lý phản hồi JSON
-            String translation = processTranslationResponse(response.toString());
 
-            return translation;
+            return processTranslationResponse(response.toString());
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -41,7 +41,7 @@ public class googleTranslator {
         return null;
     }
 
-    private String processTranslationResponse(String jsonResponse) {
+    private static String processTranslationResponse(String jsonResponse) {
         Gson gson = new Gson();
 
         // Phân tích JSON thành một JsonArray
@@ -49,9 +49,9 @@ public class googleTranslator {
 
         // Trích xuất kết quả dịch thuật từ JsonArray
         String translation = "";
-        if (jsonArray != null && jsonArray.size() > 0) {
+        if (jsonArray != null && !jsonArray.isEmpty()) {
             JsonArray translationArray = jsonArray.get(0).getAsJsonArray();
-            if (translationArray != null && translationArray.size() > 0) {
+            if (translationArray != null && !translationArray.isEmpty()) {
                 JsonElement translationElement = translationArray.get(0).getAsJsonArray().get(0);
                 translation = translationElement.getAsString();
             }
